==> qingxu620/ws63/src/4.0inch_SPI/1-Demo/Demo_STM32/Demo_MSP4030_MSP4031_STM32F103C8T6_Software_SPI/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"
#include "spi.h"

u16 Lcd_ReadData_16Bit(void)
{
	u16 r,g;
	LCD_CS_CLR;
	LCD_RS_CLR;	  
	SPI_WriteByte(lcddev.rramcmd);	
	LCD_RS_SET;
	SPI_ReadByte();
	r = SPI_ReadByte();
	g = SPI_ReadByte();
	LCD_CS_SET;
	r<<=8;
	r|=g;
	return r;
}

void LCD_GPIOInit(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;	      
	RCC_APB2PeriphClockCmd( RCC_APB2Periph_GPIOB ,ENABLE);	//使能GPIOB时钟
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6| GPIO_Pin_7| GPIO_Pin_8|GPIO_Pin_9; //GPIOB6,7,8,9
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;   //推挽输出
	GPIO_Init(GPIOB, &GPIO_InitStructure);//初始化
	LCD_LED=1;  //点亮背光
}

u16 LCD_Read_ID(void)
{
	u8 i,val[3] = {0};
	LCD_WR_REG(0xF0);     // Command Set Control
	LCD_WR_DATA(0xC3);   

	LCD_WR_REG(0xF0);     
	LCD_WR_DATA(0x96);  
	LCD_CS_CLR;
	for(i=1;i<4;i++)
	{
		LCD_RS_CLR;	  
		SPI_WriteByte(0xFB);
		LCD_RS_SET;
		SPI_WriteByte(0x10+i);
		LCD_RS_CLR;	  
		SPI_WriteByte(0xD3);
		LCD_RS_SET;
		val[i-1] = SPI_ReadByte();
		LCD_RS_CLR;	  
		SPI_WriteByte(0xFB);
		LCD_RS_SET;
		SPI_WriteByte(0x00);	
	}
	LCD_CS_SET;
	LCD_WR_REG(0xF0);     // Command Set Control
	LCD_WR_DATA(0x3C);   
	LCD_WR_REG(0xF0);     
	LCD_WR_DATA(0x69);  
	lcddev.id=val[1];
	lcddev.id<<=8;
	lcddev.id|=val[2];
	return lcddev.id;
}
