==> qingxu620/ws63/src/4.0inch_SPI/1-Demo/Demo_STM32/Demo_MSP4030_MSP4031_STM32F767IGT6_Hardware_SPI/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"
#include "spi.h"

u16 Lcd_ReadData_16Bit(void)
{
	u16 r,g;
	LCD_CS_CLR;
	LCD_RS_CLR;	  
	SPI2_ReadWriteByte(lcddev.rramcmd);
	SPI2_SetSpeed(SPI_BAUDRATEPRESCALER_32);
	LCD_RS_SET;
	SPI2_ReadWriteByte(0xFF);
	r = SPI2_ReadWriteByte(0xFF);
	g = SPI2_ReadWriteByte(0xFF);
	SPI2_SetSpeed(SPI_BAUDRATEPRESCALER_2);
	LCD_CS_SET;
	r<<=8;
	r|=g;
	return r;
}

void LCD_GPIOInit(void)
{
		    GPIO_InitTypeDef GPIO_Initure;
    
    __HAL_RCC_GPIOD_CLK_ENABLE();           //使能GPIOF时钟
    
    //PF6
    GPIO_Initure.Pin=GPIO_PIN_5| GPIO_PIN_6|GPIO_PIN_11| GPIO_PIN_12;            //PF6
    GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
    GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
    GPIO_Initure.Speed=GPIO_SPEED_HIGH;     //快速         
    HAL_GPIO_Init(GPIOD,&GPIO_Initure);     //初始化
		HAL_GPIO_WritePin(GPIOD,GPIO_PIN_5| GPIO_PIN_6|GPIO_PIN_11|GPIO_PIN_12,GPIO_PIN_SET);
		LCD_LED(1);
}

u16 LCD_Read_ID(void)
{
	u8 i,val[3] = {0};
	LCD_WR_REG(0xF0);     // Command Set Control
	LCD_WR_DATA(0xC3);   

	LCD_WR_REG(0xF0);     
	LCD_WR_DATA(0x96);  
	LCD_CS_CLR;
	for(i=1;i<4;i++)
	{
		LCD_RS_CLR;	  
		SPI2_ReadWriteByte(0xFB);
		LCD_RS_SET;
		SPI2_ReadWriteByte(0x10+i);
		LCD_RS_CLR;	  
		SPI2_ReadWriteByte(0xD3);
		SPI2_SetSpeed(SPI_BAUDRATEPRESCALER_32);
		LCD_RS_SET;
		val[i-1] = SPI2_ReadWriteByte(0xFF);
		SPI2_SetSpeed(SPI_BAUDRATEPRESCALER_4);
		LCD_RS_CLR;	  
		SPI2_ReadWriteByte(0xFB);
		LCD_RS_SET;
		SPI2_ReadWriteByte(0x00);	
	}
	SPI2_SetSpeed(SPI_BAUDRATEPRESCALER_2);
	LCD_CS_SET;
	LCD_WR_REG(0xF0);     // Command Set Control
	LCD_WR_DATA(0x3C);   
	LCD_WR_REG(0xF0);     
	LCD_WR_DATA(0x69);  
	lcddev.id=val[1];
	lcddev.id<<=8;
	lcddev.id|=val[2];
	return lcddev.id;
}
